--- a/htmljs/marksheet.html
+++ b/htmljs/marksheet.html
@@ -127,7 +127,7 @@
                             </div>
                             <div class="col text-center">
                                 <button type="button" class="btn btn-success" onclick="generateMark()">Generate Marklist</button>
-                                <button type="button" class="btn btn-secondary" onclick="resetForm()">Reset</button>
+                                <button type="reset" class="btn btn-secondary">Reset</button>
                             </div>
                         </form>
                     </div>
