script to generate table

--- a/htmljs/marksheet.html
+++ b/htmljs/marksheet.html
@@ -130,6 +130,12 @@
                                 <button type="reset" class="btn btn-secondary">Reset</button>
                             </div>
                         </form>
+                        <br>
+                        <div class="row">
+                            <div class="col" id="table">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
