--- a/htmljs/marksheet.html
+++ b/htmljs/marksheet.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Student Marksheet</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="./js/marksheet.js"></script>
 </head>
 <body>
     <div class="container">
@@ -126,7 +127,7 @@
                                 </div>
                             </div>
                             <div class="col text-center">
-                                <button type="submit" class="btn btn-success" onclick="generateMark()">Generate Marklist</button>
+                                <button type="button" class="btn btn-success" onclick="generateMark()">Generate Marklist</button>
                                 <button type="reset" class="btn btn-secondary" onclick="resetTable()">Reset</button>
                             </div>
                         </form>
@@ -141,6 +142,5 @@
             </div>
         </div>
     </div>
-    <script src="./js/marksheet.js"></script>
 </body>
 </html>
